--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -41,8 +41,8 @@
                     <ul>
                         <li><a href="/Order/AirIn_List">空运进口</a></li>
                         <li><a href="/Order/AirOut_List">空运出口</a></li>
-                        <li><a href="#">陆运进口</a></li>
-                        <li><a href="#">陆运出口</a></li>
+                        <li><a href="/Order/LandIn_List">陆运进口</a></li>
+                        <li><a href="/Order/LandOut_List">陆运出口</a></li>
                         <li><a href="/Order/SeaIn_List">海运进口</a></li>
                         <li><a href="/Order/SeaOut_List">海运出口</a></li>
                     </ul>
