--- a/Views/Declare/SpecialSupervision_List.cshtml
+++ b/Views/Declare/SpecialSupervision_List.cshtml
@@ -48,28 +48,28 @@
                     <th data-options="field: 'ID',width:80,checkbox:true"></th>
                     <th data-options="field:'SFGOODSUNIT',sortable:true">收/发货人</th>
                     <th data-options="field:'text',width:80,sortable:true">报关单号</th>
-                    <th data-options="field:'text',sortable:true">海关通关状态</th>
-                    <th data-options="field:'text',sortable:true">关务状态</th>
+                    <th data-options="field:'text',width:100,sortable:true">海关通关状态</th>
+                    <th data-options="field:'text',width:100,sortable:true">关务状态</th>
                 </tr>
             </thead>
             <thead>
                 <tr>
-                    <th data-options="field:'GOODSNUM',sortable:true">件数</th>
-                    <th data-options="field:'GOODSWEIGHT',sortable:true">重量</th>
-                    <th data-options="field:'TURNPRENO',sortable:true">转关转录单号</th>
-                    <th data-options="field:'ARRIVEDNO',sortable:true">运抵编号</th>
-                    <th data-options="field:'GUANWUJIESHOUTIME',sortable:true">关务接受时间</th>
-                    <th data-options="field:'BAORUHAIGUANTIME',sortable:true">报入海关时间</th>
-                    <th data-options="field:'DANZHENGFANGXINGTIME',sortable:true">单证放行时间</th>
-                    <th data-options="field:'SHIWUFANGXINGTIME',sortable:true">实物放行时间</th>
-                    <th data-options="field:'DANZHENGFANGXINGUSERNAME',sortable:true">单证放行人</th>
-                    <th data-options="field:'SHIWUFANGXINGUSERNAME',sortable:true">实物放行人</th>
+                    <th data-options="field:'GOODSNUM',width:100,sortable:true">件数</th>
+                    <th data-options="field:'GOODSWEIGHT',width:100,sortable:true">重量</th>
+                    <th data-options="field:'TURNPRENO',width:100,sortable:true">转关转录单号</th>
+                    <th data-options="field:'ARRIVEDNO',width:100,sortable:true">运抵编号</th>
+                    <th data-options="field:'GUANWUJIESHOUTIME',width:100,sortable:true">关务接受时间</th>
+                    <th data-options="field:'BAORUHAIGUANTIME',width:100,sortable:true">报入海关时间</th>
+                    <th data-options="field:'DANZHENGFANGXINGTIME',width:100,sortable:true">单证放行时间</th>
+                    <th data-options="field:'SHIWUFANGXINGTIME',width:100,sortable:true">实物放行时间</th>
+                    <th data-options="field:'DANZHENGFANGXINGUSERNAME',width:100,sortable:true">单证放行人</th>
+                    <th data-options="field:'SHIWUFANGXINGUSERNAME',width:100,sortable:true">实物放行人</th>
                     <th data-options="field:'FWONO',width:180,sortable:true">FWO订单号</th>
                     <th data-options="field:'FOONO',width:190,sortable:true">FOO报关服务号</th>
                     <th data-options="field:'FOONOBJ',width:190,sortable:true">FOO报检服务号</th>
-                    <th data-options="field:'CODE',sortable:true">业务编号</th>
-                    <th data-options="field:'INOUTTYPE',sortable:true">进出口类别</th>
-                    <th data-options="field:'REPWAYID',sortable:true">申报方式</th>
+                    <th data-options="field:'CODE',width:100,sortable:true">业务编号</th>
+                    <th data-options="field:'INOUTTYPE',width:100,sortable:true">进出口类别</th>
+                    <th data-options="field:'REPWAYID',width:100,sortable:true">申报方式</th>
                 </tr>
             </thead>
         </table>
