--- a/Views/Declare/DomesticBlc_List.cshtml
+++ b/Views/Declare/DomesticBlc_List.cshtml
@@ -40,7 +40,7 @@
 <div class="ibox-content">
     <div class="table-responsive">
         <table id="datagrid" class="easyui-datagrid" title="结转BLC" style="height:auto;min-height:500px;max-height:800px"
-               data-options="queryParams:{BUSITYPE:'BLC'}">
+               data-options="queryParams:{BUSITYPE:'BLC'} ">
             <thead data-options="frozen:true">
                 <tr>
                     <th data-options="field: 'ID',width:80,checkbox:true"></th>
@@ -49,17 +49,17 @@
                     <th data-options="field:'text',width:100">报关单号</th>
                     <th data-options="field:'text',width:100">出口报关单号</th>
                     <th data-options="field:'CONTRACTNO',width:100">发票合同号</th>
-                    <th data-options="field:'DECLWAY',width:70,formatter:formatDECLWAY">申报方式</th>                          
+                    <th data-options="field:'DECLWAY',width:70,formatter:formatDECLWAY">申报方式</th>
                 </tr>
             </thead>
             <thead>
                 <tr>
                     <th data-options="field:'text',width:100">海关通关状态</th>
-                    <th data-options="field:'text',width:100">关务状态</th>            
+                    <th data-options="field:'text',width:100">关务状态</th>
                     <th data-options="field:'BUSITYPE',width:100,formatter:formatBUSITYPE">业务类型</th>
                     <th data-options="field:'INSPSTATUS',width:100,sortable:true">报检状态</th>
                     <th data-options="field:'GOODSNUM',width:100,sortable:true">件数</th>
-                    <th data-options="field:'GOODSWEIGHT',width:100,sortable:true">重量</th>                    
+                    <th data-options="field:'GOODSWEIGHT',width:100,sortable:true">重量</th>
                     <th data-options="field:'GUANWUJIESHOUTIME',width:100,sortable:true">关务接受时间</th>
                     <th data-options="field:'BAORUHAIGUANTIME',width:100,sortable:true">报入海关时间</th>
                     <th data-options="field:'DANZHENGFANGXINGTIME',width:100,sortable:true">单证放行时间</th>
@@ -68,9 +68,10 @@
                     <th data-options="field:'SHIWUFANGXINGUSERNAME',width:100,sortable:true">实物放行人</th>
                     <th data-options="field:'ASSOCIATETRADEWAY',width:100,sortable:true">贸易方式</th>
                     <th data-options="field:'FWONO',width:180,sortable:true">FWO订单号</th>
-                    <th data-options="field:'FOONO',width:190,sortable:true">FOO报关服务号</th> 
+                    <th data-options="field:'FOONO',width:190,sortable:true">FOO报关服务号</th>
                     <th data-options="field:'CODE',width:100,sortable:true">业务编号</th>
                     <th data-options="field:'CUSTOMDISTRICTCODE',width:100,sortable:true">关区代码</th>
+                    <th data-options="field: 'CORRESPONDNO',width:200">四单关联号</th>
                 </tr>
             </thead>
         </table>
