--- a/Views/Declare/OverlayBonded_Edit.cshtml
+++ b/Views/Declare/OverlayBonded_Edit.cshtml
@@ -33,7 +33,7 @@
                         </td>
                         <td>
                             <label> FWO号:</label>
-                            <input class="easyui-textbox" type="text" name="CODE" disabled="disabled" />
+                            <input class="easyui-textbox" type="text" name="FWONO" disabled="disabled" />
                         </td>
                         <td>
                             <label>FOO号:</label>
@@ -295,7 +295,7 @@
                         </td>
                         <td>
                             <label> FWO号:</label>
-                            <input class="easyui-textbox" type="text" name="CODE" disabled="disabled" />
+                            <input class="easyui-textbox" type="text" name="FWONO" disabled="disabled" />
                         </td>
                         <td>
                             <label>FOO号:</label>
